update skeleton
